fix bugs  - product-archive  - header , footer spacing  - single-product

--- a/scss/components/_product.scss
+++ b/scss/components/_product.scss
@@ -1,9 +1,7 @@
 .product-loop {
   height: 100%;
   min-height: 15rem;
-  min-width: 13rem;
   width: 100%;
-  max-width: 16.2rem;
   position: relative;
   display: block;
   background-color: rgba($color-primary2, 0.2);
