--- a/scss/pages/_footer.scss
+++ b/scss/pages/_footer.scss
@@ -1,4 +1,5 @@
 footer {
+  margin-inline: -1.875rem;
   border-top: 1px solid #fff;
   background-color: $color-primary1;
   padding: 2.5rem 2rem;
