--- a/scss/pages/_productArchive.scss
+++ b/scss/pages/_productArchive.scss
@@ -28,6 +28,7 @@ main.product-archive {
 
       > * {
         flex: 1;
+        min-width: 13rem;
       }
     }
 
